--- a/home.html
+++ b/home.html
@@ -1,8 +1,12 @@
 <!doctype html>
     <html>
         <head>
+          <title> COURSE NAME </title>
             <body>
-                
+                <h2> Welcome to the course: "course name here"</h2>
+                  <p>Lorem Ipsum is simply dummy text of the printing and typese
+                    tting industry. Lorem Ipsum has been the industry's standard
+                     dummy text ever since the 1500s,</p>
             </body>
         </head>
     </html>
