add navigation bar content (minimal) and styling

--- a/home.html
+++ b/home.html
@@ -1,12 +1,36 @@
-<!doctype html>
-    <html>
-        <head>
-          <title> COURSE NAME </title>
-            <body>
-                <h2> Welcome to the course: "course name here"</h2>
-                  <p>Lorem Ipsum is simply dummy text of the printing and typese
-                    tting industry. Lorem Ipsum has been the industry's standard
-                     dummy text ever since the 1500s,</p>
-            </body>
-        </head>
-    </html>
+<!DOCTYPE html>
+<html>
+
+<head>
+    <title>COURSE NAME</title>
+    <link rel="stylesheet" type="text/css" href="stylesheets/main.css" />
+</head>
+
+<body>
+    <nav>
+        <div>
+            <div>
+                <a href="">Course name</a>
+            </div>
+            <div>
+                <ul>
+                    <li>Announcements</li>
+                    <li>Schedule</li>
+                    <li>Assignments & labs</li>
+                    <li>Grading & grades</li>
+                </ul>
+            </div>
+        </div>
+    </nav>
+
+    <div>
+        <h2>Welcome to the course: "course name here"</h2>
+        <p>
+            Lorem Ipsum is simply dummy text of the printing and typesetting
+            industry. Lorem Ipsum has been the industry's standard dummy text ever
+            since the 1500s,
+        </p>
+    </div>
+</body>
+
+</html>
