--- a/announcements.html
+++ b/announcements.html
@@ -32,7 +32,7 @@
     </nav>
 
     <div>
-        <h2>Welcome to the course: "course name here"</h2>
+        <h2>Announcements</h2>
         <p>
             Lorem Ipsum is simply dummy text of the printing and typesetting
             industry. Lorem Ipsum has been the industry's standard dummy text ever
