--- a/home.html
+++ b/home.html
@@ -7,13 +7,18 @@
 </head>
 
 <body>
-    <nav>
-        <div>
-            <div>
-                <a href="home.html">Webtechnology</a>
+    <nav class="header">
+        <div class="header__inner">
+            <div class="header__inner--top"> 
+                <h2>
+                    <a class="header__title">Webtechnology</a>
+                </h2>
             </div>
-            <div>
-                <ul>
+            <div class="header__inner--bottom">
+                <ul class="header__subtitles">
+                    <li>
+                        <a href="home.html">Home</a>
+                    </li>
                     <li>
                         <a href="announcements.html">Announcements</a>
                     </li>
@@ -32,7 +37,7 @@
     </nav>
 
     <div>
-        <h2>Welcome to the course: "course name here"</h2>
+        <h2>Welcome to Webtechnology</h2>
         <p>
             Lorem Ipsum is simply dummy text of the printing and typesetting
             industry. Lorem Ipsum has been the industry's standard dummy text ever
