add some content to home and announcements

--- a/assignments.html
+++ b/assignments.html
@@ -16,19 +16,19 @@
             </div>
             <div class="header__inner--bottom">
                 <ul class="header__subtitles">
-                    <li>
+                    <li class="sub__elem">
                         <a href="home.html">Home</a>
                     </li>
-                    <li>
+                    <li class="sub__elem">
                         <a href="announcements.html">Announcements</a>
                     </li>
-                    <li>
-                        <a href="schedule.html">Schedule</a> 
+                    <li class="sub__elem">
+                        <a href="schedule.html">Schedule</a>
                     </li>
-                    <li>
+                    <li class="sub__elem">
                         <a href="assignments.html">Assignments & labs</a>
                     </li>
-                    <li>
+                    <li class="sub__elem">
                         <a href="grading.html">Grading & grades</a>
                     </li>
                 </ul>
