--- a/home.html
+++ b/home.html
@@ -9,26 +9,26 @@
 <body>
     <nav class="header">
         <div class="header__inner">
-            <div class="header__inner--top"> 
+            <div class="header__inner--top">
                 <h2>
                     <a class="header__title">Webtechnology</a>
                 </h2>
             </div>
             <div class="header__inner--bottom">
                 <ul class="header__subtitles">
-                    <li>
+                    <li class="sub__elem">
                         <a href="home.html">Home</a>
                     </li>
-                    <li>
+                    <li class="sub__elem">
                         <a href="announcements.html">Announcements</a>
                     </li>
-                    <li>
-                        <a href="schedule.html">Schedule</a> 
+                    <li class="sub__elem">
+                        <a href="schedule.html">Schedule</a>
                     </li>
-                    <li>
+                    <li class="sub__elem">
                         <a href="assignments.html">Assignments & labs</a>
                     </li>
-                    <li>
+                    <li class="sub__elem">
                         <a href="grading.html">Grading & grades</a>
                     </li>
                 </ul>
@@ -36,14 +36,87 @@
         </div>
     </nav>
 
-    <div>
+    <section>
         <h2>Welcome to Webtechnology</h2>
-        <p>
-            Lorem Ipsum is simply dummy text of the printing and typesetting
-            industry. Lorem Ipsum has been the industry's standard dummy text ever
-            since the 1500s,
-        </p>
-    </div>
+
+        <div>
+            <p>
+                Internet is the most relevant information technology of our age. World
+                Wide Web is its most important application. In this course we will
+                learn the architecture of WWW, its main protocols, representation
+                formats and development technologies. The practical component of the
+                course will focus on the design and implementation of Web
+                applications. Additional topics such as Semantic Web, Social Web and
+                Adaptive Web will help us better understand current trends of Web
+                development.
+            </p>
+
+            <p>
+                Course material is roughly divided into 4 learning units:
+                <ul>
+                    <li>Client representation (Lectures 1-3),</li>
+                    <li>Client programming (Lectures 4-8),</li>
+                    <li>Server programming (Lectures 9-13),</li>
+                    <li>Trends of Web Development (Lectures 14-16).</li>
+                </ul>
+            </p>
+        </div>
+
+        <div>
+            <p>
+                <h3>Course prerequisites</h3>
+
+                The course has no formal prerequisites. However,
+                basic knowledge of programming are expected. Although this is an introductory
+                course, many students taking it have had experience with some aspects of Web
+                development. If you do not have any knowledge of HTML, CSS and JavaScript,
+                you definitely can still get a high grade in the course, but you will need to work
+                hard for it.
+            </p>
+        </div>
+
+        <div>
+            <p>
+                <h3>Working methods</h3>
+
+                <ul>
+                    <li>
+                        <em>Lectures.</em> Most of the course material is delivered through standard
+                        lectures accompanied by PowerPoint slides. Lectures take place twice
+                        a week. After each lecture, its slides are made available on the
+                        course page.
+                    </li>
+
+                    <li>
+                        <em>Practical classes.</em> Practical classes follow the lectures and are conducted by teaching
+                        assistants. They can help you find answers to practical questions
+                        and progress with your homework assignments.
+                    </li>
+
+                    <li>
+                        <em>Homework assignments.</em> Homework assignments are set out to help you
+                        practice knowledge acquired during lectures. They are done in groups
+                        of 3. You are responsible for forming your group. Homework will
+                        gradually develop, thus you will be able to reuse and develop your
+                        code throughout the course. Keep in mind, that assignment 3 is much
+                        more challenging than the first two. You are given enough time to
+                        complete it, make sure to start using this time as soon as possible.
+                    </li>
+
+                    <li>
+                        <em>Exams.</em> The course has two main exams: the midterm and the final. The
+                        midterm covers the material of the first 8 lectures. The final
+                        covers the last 8. Both exams are digital; you will take them in the
+                        UU assessment system Remindo. Both exams are closed books. You will
+                        have 100 minutes to answer exam questions, if you are a student
+                        registered for an extra time during exams, you will have 120
+                        minutes. Some exam questions are more practical, and some will
+                        verify your knowledge of important concepts and facts.
+                    </li>
+                </ul>
+            </p>
+        </div>
+    </section>
 </body>
 
 </html>
