--- a/announcements.html
+++ b/announcements.html
@@ -9,26 +9,26 @@
 <body>
     <nav class="header">
         <div class="header__inner">
-            <div class="header__inner--top"> 
+            <div class="header__inner--top">
                 <h2>
                     <a class="header__title">Webtechnology</a>
                 </h2>
             </div>
             <div class="header__inner--bottom">
                 <ul class="header__subtitles">
-                    <li>
+                    <li class="sub__elem">
                         <a href="home.html">Home</a>
                     </li>
-                    <li>
+                    <li class="sub__elem">
                         <a href="announcements.html">Announcements</a>
                     </li>
-                    <li>
-                        <a href="schedule.html">Schedule</a> 
+                    <li class="sub__elem">
+                        <a href="schedule.html">Schedule</a>
                     </li>
-                    <li>
+                    <li class="sub__elem">
                         <a href="assignments.html">Assignments & labs</a>
                     </li>
-                    <li>
+                    <li class="sub__elem">
                         <a href="grading.html">Grading & grades</a>
                     </li>
                 </ul>
@@ -39,9 +39,101 @@
     <div>
         <h2>Announcements</h2>
         <p>
-            Lorem Ipsum is simply dummy text of the printing and typesetting
-            industry. Lorem Ipsum has been the industry's standard dummy text ever
-            since the 1500s,
+            <ul>
+                <li>
+                    <em> 22 Jan 2020 </em> <br>
+                    <p>I’ve uploaded solutions to (most) <a href="doc/11-uitwerkingen.pdf">exercises on Hoare logic</a>
+                        from last
+                        year’s lecture notes.</p>
+                </li>
+
+                <li>
+                    <em> 21 Jan 2020 </em> <br>
+                    <p>The exam next week will cover all the material in the <em>second half</em> of
+                        the course – that is all the material covered in weeks 5-9 of the
+                        course. This includes lecture 15 on operational semantics and Hoare
+                        logic, but only up to the rule for loops in Hoare logic.</p>
+
+                    <p>This material does depend on some of the earlier material (such as,
+                        the first lecture on propositional logic) – so you will be expected
+                        to know this as well.</p>
+
+                    <p>Any material that is not covered in the second half of the course –
+                        for example, circuit diagrams – will not be on the exam.</p>
+                </li>
+
+                <li>
+                    <em> 20 Jan 2020 </em> <br>
+                    <p>I’ve uploaded <a href="doc/natural-deduction-solutions.pdf">the solutions to the exercises on
+                            natural
+                            deduction</a>. Apologies for the poor handwriting – I hope you can all
+                        read them.</p>
+                </li>
+
+                <li>
+                    <em> 14 Jan 2020 </em> <br>
+                    <p>There <em>will</em> be a mini-quiz on Thursday the 16th. The quiz will only
+                        cover material from Chapter 11.</p>
+
+                    <p>Also note that we will no longer be using the book, Modelling
+                        Computing Systems, in the last two lectures. If you’re unsure about
+                        understanding the material referenced yourself, I recommend
+                        attending the lectures.</p>
+
+                </li>
+
+                <li>
+                    <em> 02 Dec 2019 </em> <br>
+                    <p>I’ve added more information about the material that will be covered by
+                        the midterm exam, both on the <a href="schedule.html">schedule</a> and <a
+                            href="faq.html">faq</a></p>
+
+                </li>
+
+                <li>
+                    <em> 21 Nov 2019 </em> <br>
+                    <p>I’ve updated <a href="faq.html">the FAQ</a> with some of the questions I’ve received by
+                        email. Be sure to check it out and get in touch if anything regarding
+                        the course organization is unclear.</p>
+                </li>
+
+                <li>
+                    <em> 14 Nov 2019 </em> <br>
+                    <p>The slides of the second lecture are now <a
+                            href="http://www.cs.uu.nl/docs/vakken/b1li/schedule.html">on the overview
+                            page</a>.</p>
+
+                    <p>Be sure to check out the set of <a href="exercises.html">recommended exercises for the first
+                            lab session</a>.</p>
+
+                </li>
+
+                <li>
+                    <em> 12 Nov 2019 </em> <br>
+                    <p>I’ve updated the
+                        <a href="http://www.cs.uu.nl/docs/vakken/b1li/exercises.html">exercise page</a>
+                        with information about when the mini-exams will be held and the
+                        material that will be covered.</p>
+
+                </li>
+
+                <li>
+                    <em> 12 Nov 2019 </em> <br>
+                    <p>After today’s lecture, I’ll upload the slides <a
+                            href="http://www.cs.uu.nl/docs/vakken/b1li/schedule.html">to the overview
+                            page</a>.</p>
+
+                    <p>Note that there will <strong>not</strong> be a exercise session on Thursday 14
+                        November. The first exercise session will be on Tuesday 19 November.</p>
+
+                </li>
+
+                <li>
+                    <em> 02 Sep 2019 </em> <br>
+                    <p>Welcome to the website for the course <em>Logica voor informatica</em>. More
+                        content will follow shortly.</p>
+                </li>
+            </ul>
         </p>
     </div>
 </body>
