--- a/announcements.html
+++ b/announcements.html
@@ -1,20 +1,24 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 
 <head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Webtechnology - INFOB2WT</title>
     <link rel="stylesheet" type="text/css" href="stylesheets/main.css" />
 </head>
 
 <body>
-    <nav class="header">
+    <header class="header">
         <div class="header__inner">
             <div class="header__inner--top">
+                <img class="header__logo--left" src="./images/1200px-Utrecht_University_logo.svg.png" alt="UU_logo" />
                 <h2>
                     <a class="header__title">Webtechnology</a>
                 </h2>
             </div>
-            <div class="header__inner--bottom">
+
+            <nav class="header__inner--bottom">
                 <ul class="header__subtitles">
                     <li class="sub__elem">
                         <a href="home.html">Home</a>
@@ -32,12 +36,13 @@
                         <a href="grading.html">Grading & grades</a>
                     </li>
                 </ul>
-            </div>
+            </nav>
         </div>
-    </nav>
-
-    <div>
-        <h2>Announcements</h2>
+    </header>
+    <section>
+        <div class="title__h2">
+            <h2>Announcements</h2>
+        </div>
         <p>
             <ul>
                 <li>
@@ -135,7 +140,7 @@
                 </li>
             </ul>
         </p>
-    </div>
+    </section>
 </body>
 
 </html>
