--- a/grading.html
+++ b/grading.html
@@ -1,20 +1,24 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 
 <head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Webtechnology - INFOB2WT</title>
     <link rel="stylesheet" type="text/css" href="stylesheets/main.css" />
 </head>
 
 <body>
-    <nav class="header">
+    <header class="header">
         <div class="header__inner">
-            <div class="header__inner--top"> 
+            <div class="header__inner--top">
+                <img class="header__logo--left" src="./images/1200px-Utrecht_University_logo.svg.png" alt="UU_logo" />
                 <h2>
                     <a class="header__title">Webtechnology</a>
                 </h2>
             </div>
-            <div class="header__inner--bottom">
+
+            <nav class="header__inner--bottom">
                 <ul class="header__subtitles">
                     <li class="sub__elem">
                         <a href="home.html">Home</a>
@@ -32,18 +36,18 @@
                         <a href="grading.html">Grading & grades</a>
                     </li>
                 </ul>
-            </div>
+            </nav>
         </div>
-    </nav>
+    </header>
 
-    <div>
+    <section>
         <h2>Grading & grades</h2>
         <p>
             Lorem Ipsum is simply dummy text of the printing and typesetting
             industry. Lorem Ipsum has been the industry's standard dummy text ever
             since the 1500s,
         </p>
-    </div>
+    </section>
 </body>
 
 </html>
