--- a/home.html
+++ b/home.html
@@ -1,20 +1,24 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 
 <head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Webtechnology - INFOB2WT</title>
     <link rel="stylesheet" type="text/css" href="stylesheets/main.css" />
 </head>
 
 <body>
-    <nav class="header">
+    <header class="header">
         <div class="header__inner">
             <div class="header__inner--top">
+                <img class="header__logo--left" src="./images/1200px-Utrecht_University_logo.svg.png" alt="UU_logo" />
                 <h2>
                     <a class="header__title">Webtechnology</a>
                 </h2>
             </div>
-            <div class="header__inner--bottom">
+
+            <nav class="header__inner--bottom">
                 <ul class="header__subtitles">
                     <li class="sub__elem">
                         <a href="home.html">Home</a>
@@ -32,12 +36,14 @@
                         <a href="grading.html">Grading & grades</a>
                     </li>
                 </ul>
-            </div>
+            </nav>
         </div>
-    </nav>
+    </header>
 
     <section>
-        <h2>Welcome to Webtechnology</h2>
+        <div class="title__h2">
+            <h2>Welcome to Webtechnology</h2>
+        </div>
 
         <div>
             <p>
@@ -63,9 +69,8 @@
         </div>
 
         <div>
+            <h3>Course prerequisites</h3>
             <p>
-                <h3>Course prerequisites</h3>
-
                 The course has no formal prerequisites. However,
                 basic knowledge of programming are expected. Although this is an introductory
                 course, many students taking it have had experience with some aspects of Web
@@ -76,9 +81,8 @@
         </div>
 
         <div>
+            <h3>Working methods</h3>
             <p>
-                <h3>Working methods</h3>
-
                 <ul>
                     <li>
                         <em>Lectures.</em> Most of the course material is delivered through standard
@@ -113,9 +117,133 @@
                         minutes. Some exam questions are more practical, and some will
                         verify your knowledge of important concepts and facts.
                     </li>
+
+                    <li>
+                        <em>Additional reading.</em> The course does not have a single textbook. Most
+                        Web technology textbooks become obsolete rather fast due to constant introduction
+                        of new technologies and evolution of exciting ones. Instead, plenty of online
+                        resources structured around course topics are made available for you. You are
+                        are not required to read all the suggested resources. They are there to help you
+                        understand challenging topics and ensure you have enough points of reference
+                        to complete homework assignments.
+                    </li>
                 </ul>
             </p>
         </div>
+
+        <div>
+            <h3>Course Outcomes</h3>
+            <p>
+                This course is designed to help you understand how Web applications operate
+                and learn how to build them yourself.</p>
+
+            <p>After completing Unit 1, you will:
+                <li>
+                    know the main Internet communication protocols and understand their characteristics;
+                </li>
+                <li>
+                    be able to write well-structured, easily maintained, standards-compliant HTML5 code;
+                </li>
+                <li>
+                    understand the need and requirements of the accessibility standards and be able to produce
+                    accessible HTML content;
+                </li>
+                <li>
+                    be able to write well-structured, easily maintained, standards-compliant CSS3 code;
+                </li>
+                <li>
+                    understand the need and requirements of the responsive design and be able to tailor the presentation
+                    of your HTML to users’ platforms using CSS-based responsive design.
+                </li>
+            </p>
+
+            <p>After completing Unit 2, you will:
+                <li>Understand the basics of JavaScript language (variables, basic data types, control flow, functions)
+                    and be able to write simple JavaScript code
+                </li>
+                <li>Understand Document Object Model and be able to access and modify it with the help of JavaScript
+                </li>
+                <li>Be able to use JavaScript to implement interactive, event-based Web pages
+                </li>
+                <li>Understand the relations between functions and prototypes, understand the nature of JavaScript
+                    “classes”, be able to write OOP code in JavaScript
+                </li>
+                <li>Understand the flexible nature of JavaScript functions, understand the concept of callback
+                    functions, be able to write basic functional code with JavaScript
+                </li>
+                <li>Understand such components of the JavaScript browser environment as event loop, call stack and
+                    callback queue, be able to write basic asynchronous JavaScript code
+                </li>
+                <li>Be able to use JavaScript frameworks
+                </li>
+                <li>understand the basics of XML and XML Schema, understand JSON, be able to process XML and JSON with
+                    JavaScript 5</li>
+            </p>
+
+            <p>After completing Unit 3, you will:
+                <li>Understand the typical 3-tier client-server architecture of Web applications
+                </li>
+                <li>Understand the characteristics of Node.JS as the Web server development technology
+                </li>
+                <li>Understand the workflow of a Web server and Node.JS/Express.JS server in particular
+                </li>
+                <li>Be able to implement typical Express middleware (logging, routing, error handling, serving static
+                    files, DB access, session management)
+                </li>
+                <li>Understand how to maintain and control user state in Web applications between the client and the
+                    server
+                </li>
+                <li>Understand cookies, their characteristics and categories, be able to create, modify, delete, process
+                    and communicate cookies
+                </li>
+                <li>Understand the basics of session management in Web applications, be able to create and maintain
+                    sessions
+                </li>
+                <li>Understand AJAX-based communication between client and server, be able to program interactive
+                    Web-application suing AJAX
+                </li>
+                <li>understand the basic of DB management in Web applications, be able to program communication between
+                    an SQLite data base and an Express.JS web server
+                </li>
+                <li>Understand the basics of Web security, recognise main vulnerabilities ofWeb applications according
+                    to the OWASP list of top ten
+                </li>
+                <li>Be able to implement secure Web applications</li>
+            </p>
+
+            <p>After completing Unit 4, you will:
+                <li>Recognise several trends of Web development (Adaptive Web, Semantic Web, Social Web)
+                </li>
+                <li>Understand the concept of personalisation, its role in Web applications and problems it can help to
+                    solve
+                </li>
+                <li>Understand the concept of a user model/profile, how it is populated and used in adaptive
+                    applications
+                </li>
+                <li>Understand the task of personalised Web search and how Web search can be personalised
+                </li>
+                <li>Understand the task of adaptive hypermedia and different techniques it uses
+                </li>
+                <li>Understand the task of adaptive recommendation and collaborative filtering approach in particular
+                </li>
+                <li>Understand the potential dangers of Adaptive Web 6
+                </li>
+                <li>Understand the purpose of Semantic Web technologies
+                </li>
+                <li>Understand the basics of RDF, RDFS and OWL
+                </li>
+                <li>Understand the concepts of metadata and linked data
+                </li>
+                <li>Understand the basics of Schema.org
+                </li>
+                <li>Understand the characteristics of Social Web applications
+                </li>
+                <li>Understand the challenges of building Social Web applications</li>
+            </p>
+
+            </p>
+        </div>
+
     </section>
 </body>
 
