--- a/home.html
+++ b/home.html
@@ -7,43 +7,46 @@
 </head>
 
 <body>
-    <nav class="header">
-        <div class="header__inner">
-            <div class="header__inner--top"> 
+    <header class="header">
+            <div class="header__inner--top">
                 <h2>
-                    <a class="header__title">Webtechnology</a>
+                    <div class="header__title">Webtechnology</div>
                 </h2>
             </div>
-            <div class="header__inner--bottom">
-                <ul class="header__subtitles">
-                    <li>
-                        <a href="home.html">Home</a>
-                    </li>
-                    <li>
-                        <a href="announcements.html">Announcements</a>
-                    </li>
-                    <li>
-                        <a href="schedule.html">Schedule</a> 
-                    </li>
-                    <li>
-                        <a href="assignments.html">Assignments & labs</a>
-                    </li>
-                    <li>
-                        <a href="grading.html">Grading & grades</a>
-                    </li>
-                </ul>
-            </div>
-        </div>
+    </header>
+
+    <nav class="navbar">
+        <ul class="header__subtitles">
+            <li>
+                <a href="home.html">Home</a>
+            </li>
+            <li>
+                <a href="announcements.html">Announcements</a>
+            </li>
+            <li>
+                <a href="schedule.html">Schedule</a>
+            </li>
+            <li>
+                <a href="assignments.html">Assignments & labs</a>
+            </li>
+            <li>
+                <a href="grading.html">Grading & grades</a>
+            </li>
+        </ul>
     </nav>
 
-    <div>
+
+    <article class="content">
         <h2>Welcome to Webtechnology</h2>
         <p>
             Lorem Ipsum is simply dummy text of the printing and typesetting
             industry. Lorem Ipsum has been the industry's standard dummy text ever
-            since the 1500s,
+            since the 1500s,<br><br>
+            Lorem Ipsum is simply dummy text of the printing and typesetting
+            industry. Lorem Ipsum has been the industry's standard dummy text ever
+            since the 1500s,<br><br><br><br><br><br><br><br><br><br><br><br><br><br>
         </p>
-    </div>
+    </article>
 </body>
 
 </html>
