some changes to announcements

--- a/announcements.html
+++ b/announcements.html
@@ -45,98 +45,96 @@
         </div>
         <p>
             <ul>
-                <li>
-                    <em> 22 Jan 2020 </em> <br>
-                    <p>I’ve uploaded solutions to (most) <a href="doc/11-uitwerkingen.pdf">exercises on Hoare logic</a>
-                        from last
-                        year’s lecture notes.</p>
+                <li class="announcement__elem">
+                    <em> Wednesday, February 12, 2020 </em> <br>
+                    <p>Several questions about HW1 were asked today during the break that might benefit from a
+                        clarification:</p>
+
+                    <p>Q. Which aspects of Web accessibility standard must it follow? <br />
+                        A. The text of the assignment has been updated with the corresponding list.</p>
+
+                    <p>Q. Which aspects of Responsive Web guidelines must it follow?
+                        <br />
+                        A. The text of the assignment has been updated with the corresponding list.
+
+                    </p>
+
+                    <p>Q. What does it mean "Website must have ... meaningful content"? Can we just fill it with Lorem
+                        Ipsum? Can we copy content from somewhere else?<br />
+                        A. Lorem Ipsum is not meaningful content. Your Website should have at least 5 pages that a
+                        regular course website would have (e.g. Schedule, Instructors, etc.). The topic of the course is
+                        up to you. It can be a silly one or it can be a serious one. You can of course copy the content
+                        from online sources (I do not expect you to design a course). Just make sure to add a reference
+                        to the original source of the content.
+
+                    </p>
                 </li>
 
-                <li>
-                    <em> 21 Jan 2020 </em> <br>
-                    <p>The exam next week will cover all the material in the <em>second half</em> of
-                        the course – that is all the material covered in weeks 5-9 of the
-                        course. This includes lecture 15 on operational semantics and Hoare
-                        logic, but only up to the rule for loops in Hoare logic.</p>
-
-                    <p>This material does depend on some of the earlier material (such as,
-                        the first lecture on propositional logic) – so you will be expected
-                        to know this as well.</p>
-
-                    <p>Any material that is not covered in the second half of the course –
-                        for example, circuit diagrams – will not be on the exam.</p>
-                </li>
-
-                <li>
-                    <em> 20 Jan 2020 </em> <br>
-                    <p>I’ve uploaded <a href="doc/natural-deduction-solutions.pdf">the solutions to the exercises on
-                            natural
-                            deduction</a>. Apologies for the poor handwriting – I hope you can all
-                        read them.</p>
-                </li>
-
-                <li>
-                    <em> 14 Jan 2020 </em> <br>
-                    <p>There <em>will</em> be a mini-quiz on Thursday the 16th. The quiz will only
-                        cover material from Chapter 11.</p>
-
-                    <p>Also note that we will no longer be using the book, Modelling
-                        Computing Systems, in the last two lectures. If you’re unsure about
-                        understanding the material referenced yourself, I recommend
-                        attending the lectures.</p>
+                <li class="announcement__elem">
+                    <em> Wednesday, February 12, 2020 </em> <br>
+                    <p>Slides of <a
+                            href="https://uu.blackboard.com/webapps/blackboard/content/launchLink.jsp?ann_id=_450253_1&course_id=_122856_1&mode=view"
+                            target="_blank">Lecture 3</a> and additional reading material on CSS are now on Bb</p>
 
                 </li>
 
-                <li>
-                    <em> 02 Dec 2019 </em> <br>
-                    <p>I’ve added more information about the material that will be covered by
-                        the midterm exam, both on the <a href="schedule.html">schedule</a> and <a
-                            href="faq.html">faq</a></p>
+                <li class="announcement__elem">
+                    <em> Wednesday, February 12, 2020 </em> <br>
+                    <p>Hi everyone, we have 184 students out of 200 grouped now, meaning that 14 of you don't have a
+                        group. Everyone else has been assigned a group on Blackboard.</p>
+
+                    <p>Everyone who is in a group on Blackboard should see the assignment. If you can't see the
+                        assignment or don't have a group yet, please email me ASAP.</p>
+
+                    <p>The first assignment is due in one week so speak now or forever hold your peace. </p>
+                </li>
+
+                <li class="announcement__elem">
+                    <em> Sunday, February 9, 2020 </em> <br>
+                    <p>Folks, if at this point you are still looking form a group, <a
+                            href="https://uu.blackboard.com/webapps/blackboard/execute/staffinfo/manageStaffInfo?course_id=_122856_1&mode=view&mode=view"
+                            target="_blank">email to me and cc to Chris</a></p>
+                </li>
+
+                <li class="announcement__elem">
+                    <em> Friday, February 7, 2020 </em> <br>
+                    <p>
+                        Slides of <a
+                            href="https://uu.blackboard.com/webapps/blackboard/content/listContent.jsp?course_id=_122856_1&content_id=_3301844_1&mode=view"
+                            target="_blank">Lecture 2 (HTML 5.0, Standards and Accessibility)</a> + additional reading
+                        materials are available on Bb. </p>
+                </li>
+
+                <li class="announcement__elem">
+                    <em> Wednesday, February 5, 2020 </em> <br>
+                    <p> Homework assignments should be done in groups. The recommended number of students per group is
+                        three.</p>
+
+                    <p>Do not forget to send names and student IDs of you group members to Chris Ferguson
+                        (<a href="mailto:c.ferguson@uu.nl">c.ferguson@uu.nl</a>). If you have not found a group yet or
+                        your group needs one more member, use
+                        the <a
+                            href="https://uu.blackboard.com/webapps/discussionboard/do/forum?action=list_threads&course_id=_122856_1&forum_id=318680&nav=discussion_board&conf_id=_307797_1&content_id=_3397896_1&mode=view#_3397896_1"
+                            target="_blank">BlackBoard Discussion Forum</a> - I already see some activity there. </p>
+                </li>
+
+                <li class="announcement__elem">
+                    <em> Wednesday, February 5, 2020 </em> <br>
+                    <p>Slides of <a
+                            href="https://uu.blackboard.com/webapps/blackboard/content/listContent.jsp?course_id=_122856_1&content_id=_3301838_1&mode=view"
+                            target="_blank">Lecture 1 and additional reading materials are available on Bb</a> </p>
 
                 </li>
 
-                <li>
-                    <em> 21 Nov 2019 </em> <br>
-                    <p>I’ve updated <a href="faq.html">the FAQ</a> with some of the questions I’ve received by
-                        email. Be sure to check it out and get in touch if anything regarding
-                        the course organization is unclear.</p>
-                </li>
-
-                <li>
-                    <em> 14 Nov 2019 </em> <br>
-                    <p>The slides of the second lecture are now <a
-                            href="http://www.cs.uu.nl/docs/vakken/b1li/schedule.html">on the overview
-                            page</a>.</p>
-
-                    <p>Be sure to check out the set of <a href="exercises.html">recommended exercises for the first
-                            lab session</a>.</p>
-
-                </li>
-
-                <li>
-                    <em> 12 Nov 2019 </em> <br>
-                    <p>I’ve updated the
-                        <a href="http://www.cs.uu.nl/docs/vakken/b1li/exercises.html">exercise page</a>
-                        with information about when the mini-exams will be held and the
-                        material that will be covered.</p>
-
-                </li>
-
-                <li>
-                    <em> 12 Nov 2019 </em> <br>
-                    <p>After today’s lecture, I’ll upload the slides <a
-                            href="http://www.cs.uu.nl/docs/vakken/b1li/schedule.html">to the overview
-                            page</a>.</p>
-
-                    <p>Note that there will <strong>not</strong> be a exercise session on Thursday 14
-                        November. The first exercise session will be on Tuesday 19 November.</p>
-
-                </li>
-
-                <li>
-                    <em> 02 Sep 2019 </em> <br>
-                    <p>Welcome to the website for the course <em>Logica voor informatica</em>. More
-                        content will follow shortly.</p>
+                <li class="announcement__elem">
+                    <em> Tuesday, February 4, 2020 </em> <br>
+                    <p>Welcome to the Web technology course of 2019/20. Familiarize yourself with BlackBoard - it will
+                        be used extensively in the course.
+                        Read the
+                        <a href="https://uu.blackboard.com/bbcswebdav/pid-3398422-dt-content-rid-32821633_2/courses/BETA-2019-3-INFOB2WT-V/syllabus.pdf"
+                            target="_blank">course syllabus</a>. I will see you tomorrow in Androclus
+                        C101.
+                    </p>
                 </li>
             </ul>
         </p>
