assignments & grading content

--- a/assignments.html
+++ b/assignments.html
@@ -39,9 +39,9 @@
     <div>
         <h2>Assignments & labs</h2>
         <p>
-            Lorem Ipsum is simply dummy text of the printing and typesetting
-            industry. Lorem Ipsum has been the industry's standard dummy text ever
-            since the 1500s,
+            Assignment 1
+            Assignment 2
+            Assignment 3
         </p>
     </div>
 </body>
