content html formatting, metadata, footer

--- a/assignments.html
+++ b/assignments.html
@@ -4,6 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="content source" content ="http://www.cs.uu.nl/education/vak/INFOB2WT">
     <title>Webtechnology - INFOB2WT</title>
     <link rel="stylesheet" type="text/css" href="stylesheets/main.css" />
 </head>
@@ -39,14 +40,26 @@
             </nav>
         </div>
     </header>
-    <section>
+
+    <article>        
         <h2>Assignments & labs</h2>
-        <p>
-            Assignment 1
-            Assignment 2
-            Assignment 3
-        </p>
-    </section>
+        <section>
+                <h3>Assignment 1</h3>
+                <p>
+                </p>
+                <h3>Assignment 2</h3>
+                <p>
+                </p>
+                <h3>Assignment 3</h3>
+                <p>
+                </p>
+        </section>
+    </article>
+
+    <footer class="footer">       
+        <div class="footer__inner">Utrecht University 2020</div>
+    </footer>
+
 </body>
 
 </html>
