--- a/grading.html
+++ b/grading.html
@@ -4,6 +4,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="keywords" content="Utrecht University, Webtechnology, HTML, CSS">
+    <meta name="description" content="Grading and retake information">
     <title>Webtechnology - INFOB2WT</title>
     <link rel="stylesheet" type="text/css" href="stylesheets/main.css" />
 </head>
@@ -40,43 +42,47 @@
         </div>
     </header>
 
-    <section>
+    <article>
         <h2>Grading & grades</h2>
-        <p>
-            Lectures. Most of the course material is delivered through standard lectures accompanied by PowerPoint slides. Lectures take place twice a week. After each lecture, its slides are made available on the course page.
+        <section>
+            <h3>Grading</h3>
+            <p>Three group-based practical assignments will cover 50% of the course grade.
+                The other 50% will be covered by the two exams.
+                The course grade is computed as follows:</p>
+                <ul>
+                    <li>Assignment 1: 10%</li>
+                    <li>Assignment 2: 15%</li>
+                    <li>Assignment 3: 25%</li>
+                    <li>Midterm: 25%</li>
+                    <li>Final: 25%</li>
+                </ul>
+        </section>
+        <aside><img src="ilya-pavlov-OqtafYT5kTw-unsplash.jpg" alt="HTML"></aside>
+        <section>
+            <h3>Retake</h3>	
+            <p>To pass the course you need to:</p>
+            <ul>
+                <li>submit all assignments (hence, even if an assignment is not fully complete, do submit to get a non-zero grade for it);</li>
+                <li>get an average assignment grade of 4.0 or more;</li>
+                <li>take both exams;</li>
+                <li>get an average exam grade of 4.0 or more.</li>
+            </ul>
+            <p>The retake exam can be used as a substitute for either the midterm or the final exam. 
+                If you miss one of the exams (AANV grade) or score too low on one of them and get a course grade between 4.0 and 5.5, 
+                you are eligible for a retake.
+            </p>
+            <p>You cannot retake assignments.</p>
+            
+            <p>If you want to get the best possible grade, treat the deadline for assignments as strict.
+                If you miss a deadline, you have a day to submit it by e-mail, but you loose 25% of the grade.
+                </p>
+        </section>
+    </article>
+    
+    <footer class="footer">       
+        <div class="footer__inner">Utrecht University 2020</div>
+    </footer>
 
-Practical classes. Practical classes follow the lectures and are conducted by teaching assistants. They can help you find answers to practical questions and progress with your homework assignments.
-
-Homework assignments. Homework assignments are set out to help you practice knowledge acquired during lectures. They are done in groups of 3. You are responsible for forming your group. Homework will gradually develop, thus you will be able to reuse and develop your code throughout the course. Keep in mind, that assignment 3 is much more challenging than the first two. You are given enough time to complete it, make sure to start using this time as soon as possible.
-
-Exams. The course has two main exams: the midterm and the final. The midterm covers the material of the first 8 lectures. The final covers the last 8. Both exams are digital; you will take them in the UU assessment system Remindo. Both exams are closed books. You will have 100 minutes to answer exam questions, if you are a student registered for an extra time during exams, you will have 120 minutes. Some exam questions are more practical, and some will verify your knowledge of important concepts and facts.
-
-            Grading:	
-
-Three group-based practical assignments will cover 50% of the course grade. The other 50% will be covered by the two exams. The course grade is computed as follows:
-
-    Assignment 1: 10%
-    Assignment 2: 15%
-    Assignment 3: 25%
-    Midterm: 25%
-    Final: 25%
-
-Retake:	
-
-To pass the course you need to:
-
-    submit all assignments (hence, even if an assignment is not fully complete, do submit to get a non-zero grade for it);
-    get an average assignment grade of 4.0 or more;
-    take both exams;
-    get an average exam grade of 4.0 or more.
-
-The retake exam can be used as a substitute for either the midterm or the final exam. If you miss one of the exams (AANV grade) or score too low on one of them and get a course grade between 4.0 and 5.5, you are eligible for a retake.
-
-You cannot retake assignments.
-
-If you want to get the best possible grade, treat the deadline for assignments as strict. If you miss a deadline, you have a day to submit it by e-mail, but you loose 25% of the grade.
-        </p>
-    </section>
 </body>
 
 </html>
